fix(data service): add log config, fix monitoring port parsing issue, clean up code and log info level